Online/Examples/c/Example/Example/asigntse-cbindgen.h



/*
 Registers a client ID.
 @param[in] clientId
                represents the ID of the application to be registered.
                It has to be of maximum length 25 and must not contain
                the following characters: / , < , > , : , " , \ , | , ? , *  [REQUIRED]
 @param[in] clientIdLength
                length of the clientId  [REQUIRED]

         If the execution of the function has failed, the appropriate error code is returned:

             ERROR_AT_LOAD_NOT_CALLED
                @ref at_load has not been called
             ERROR_STORAGE_FAILURE
                some storage related error occured
             ERROR_SE_API_NOT_INITIALIZED
                the SE API has not been initialized
             ERROR_TIME_NOT_SET
                the managed data/time in the Secure Element has not been updated after the initialization of the SE API
                or a period of absence of current for the Secure Element
             ERROR_SECURE_ELEMENT_DISABLED
                the Secure Element has been disabled
             ERROR_INVALID_CLIENT_ID
                clientId contains invalid characters or has invalid length
             ERROR_CLIENT_ID_REGISTRATION_FAILED
                clientId registration has failed
             ERROR_CORRUPTED_REGISTERED_CLIENT_IDS
                clientId registration failed due to corrupted registered clientIds data
             ERROR_CORRUPTED_APP_DATA
                clientId registration failed due to corrupted app data
 */
int32_t at_registerClientId(const int8_t *clientId,
                            uint32_t clientIdLength);


int32_t at_setPins(const uint8_t *adminPin,
                   uint32_t adminPinLength,
                   const uint8_t *adminPuk,
                   uint32_t adminPukLength);


/*
Remove Tse config section.
 @param[in] tseID
                the ID of the Tse to remove, that is the name of the config section [REQUIRED]
 @param[in] tseIDLength
                the length of the ID of the Tse to remove [REQUIRED]
             ERROR_CONFIG_VALUE_NOT_FOUND
                the config section could not be found
 */
int32_t cfgTseRemove(const int8_t *tseID, uint32_t tseIDLength);


/*
Enable logging.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] enabled
                the switch to enable or disable logging [REQUIRED]
 */
int32_t cfgSetLoggingEnabled(bool enabled);


/*
Enable logging to a logfile.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] enabled
                the switch to enable or disable logging to file [REQUIRED]
 */
int32_t cfgSetLoggingFile(bool enabled);


/*
Set logfile target directory.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] path
                the path to the log directory [REQUIRED]
 @param[in] pathLength
                the length of the path to the log directory [REQUIRED]
 */
int32_t cfgSetLogDir(const int8_t *path, uint32_t pathLength);


/*
Set verbosity level of the logger.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] logLevel
                the log level [REQUIRED]
 @param[in] pathLength
                the length of the log level [REQUIRED]
 */
int32_t cfgSetLogLevel(const int8_t *logLevel, uint32_t logLevelLength);


/*
Makes the logger append to the specified output file, if it exists already; by default, the file would be truncated.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] enabled
                the switch to enable or disable appending [REQUIRED]
 */
int32_t cfgSetLogAppend(bool enabled);


/*
Enable a colored version of the logline-formatter.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] enabled
                the switch to enable or disable a colored version of the logline-formatter [REQUIRED]
 */
int32_t cfgSetLogColors(bool enabled);


/*
Enable more detailed log lines.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] enabled
                the switch to enable or disable more detailed log lines [REQUIRED]
 */
int32_t cfgSetLogDetails(bool enabled);


/*
Enable a colored version of the logline-formatter for stderr logging.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] enabled
                the switch to enable or disable a colored version of the logline-formatter for stderr logging [REQUIRED]
 */
int32_t cfgSetLogStderrColors(bool enabled);


/*
Set the http proxy with username and password.
 @param[in] proxyUrl
                the proxy url [REQUIRED]
 @param[in] proxyUrlLength
                the length of the proxy url [REQUIRED]
 @param[in] proxyUsername
                the proxy user name [REQUIRED]
 @param[in] proxyUsernameLength
                the length of the proxy user name [REQUIRED]
 @param[in] proxyPassword
                the proxy password [REQUIRED]
 @param[in] proxyPasswordLength
                the length of the proxy password [REQUIRED]
 */
int32_t cfgSetHttpProxyWithUsernameAndPassword(const int8_t *proxyUrl,
                                               uint32_t proxyUrlLength,
                                               const int8_t *proxyUsername,
                                               uint32_t proxyUsernameLength,
                                               const int8_t *proxyPassword,
                                               uint32_t proxyPasswordLength);


/*
Set the maximum time a request is allowed to take.
 @param[in] timeout
                the amount of milliseconds a request is allowed to take. [REQUIRED]
 */
int32_t cfgSetTimeout(uint64_t timeout);


/*
Set the number of allowed retries for a request.
 @param[in] retries
                the number of retries allowed for a request. [REQUIRED]
 */
int32_t cfgSetRetries(uint64_t retries);


/*
 The function initializeDescriptionNotSet starts the initialization of the SE API by the operator of the corresponding application.
 The initialization data in form of the description of the SE API is passed by the input parameter description.
 The description of the SE API MUST NOT have been set by the manufacturer.
 @param[in] description
                short description of the SE API.
                The parameter only be used if the description of the SE API has not been set by the manufacturer [REQUIRED].
 @param[in] descriptionLength
                length of the string representing the description of the SE API [REQUIRED]
 @return if the execution of the function has been successful, the return value EXECUTION_OK is returned.

         If the execution of the function has failed, the appropriate error code is returned:

             ERROR_AT_LOAD_NOT_CALLED
                @ref at_load has not been called
             ERROR_SIGNING_SYSTEM_OPERATION_DATA_FAILED
                determination of the log message parts for the system operation data by the Secure Element failed
             ERROR_STORING_INIT_DATA_FAILED
                storing of the data for the description of the SE API failed
             ERROR_RETRIEVE_LOG_MESSAGE_FAILED
                execution of the Secure Element functionality to retrieve log message parts has failed
             ERROR_STORAGE_FAILURE
                storing of the log message has failed
             ERROR_CERTIFICATE_EXPIRED
                the certificate with the public key for the verification of the appropriate type of log messages is expired.
                Even if a certificate expired, the log message parts are created by the Secure Element and stored by the SE API.
             ERROR_SECURE_ELEMENT_DISABLED
                the Secure Element has been disabled
             ERROR_USER_NOT_AUTHORIZED
                the user who has invoked the function initializeDescriptionNotSet is not authorized to execute this function
             ERROR_USER_NOT_AUTHENTICATED
                the user who has invoked the function initializeDescriptionNotSet has not the status authenticated
             ERROR_DESCRIPTION_SET_BY_MANUFACTURER
                the function initializeDescriptionNotSet has been invoked with a value for the input parameter description
                although the description of the SE API has been set by the manufacturer
 */
int32_t initializeDescriptionNotSet(int8_t *description,
                                    uint32_t descriptionLength);


/*
 The function initializeDescriptionSet starts the initialization of the SE API by the operator of the corresponding application.
 The description of the SE API is set by the manufacturer.
 @return if the execution of the function has been successful, the return value EXECUTION_OK is returned.

         If the execution of the function has failed, the appropriate error code is returned:

             ERROR_AT_LOAD_NOT_CALLED
                @ref at_load has not been called
             ERROR_SIGNING_SYSTEM_OPERATION_DATA_FAILED
                determination of the log message parts for the system operation data by the Secure Element failed
             ERROR_RETRIEVE_LOG_MESSAGE_FAILED
                execution of the Secure Element functionality to retrieve log message parts has failed
             ERROR_STORAGE_FAILURE
                storing of the log message has failed
             ERROR_CERTIFICATE_EXPIRED
                the certificate with the public key for the verification of the appropriate type of log messages is expired.
                Even if a certificate expired, the log message parts are created by the Secure Element and stored by the SE API.
             ERROR_SECURE_ELEMENT_DISABLED
                the Secure Element has been disabled
             ERROR_USER_NOT_AUTHORIZED
                the user who has invoked the function initializeDescriptionSet is not authorized to execute this function
             ERROR_USER_NOT_AUTHENTICATED
                the user who has invoked the function initializeDescriptionSet has not the status authenticated
             ERROR_DESCRIPTION_NOT_SET_BY_MANUFACTURER
                the function initializeDescriptionSet has been invoked without a value for the input parameter
                description although the description of the SE API has not been set by the manufacturer
 */
int32_t initializeDescriptionSet(void);