Online/Examples/csharp/Example/Example/CDeclBindings.cs


        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgSetHttpProxyWithUsernameAndPassword(byte[] proxyUrl, UInt32 proxyUrlLength
                                                                         , byte[] proxyUsername, UInt32 proxyUsernameLength
                                                                         , byte[] proxyPassword, UInt32 proxyPasswordLength);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgSetLogAppend(bool enabled);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgSetLogColors(bool enabled);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgSetLogDetails(bool enabled);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgSetLogDir(byte[] path, UInt32 pathLength);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgSetLogLevel(byte[] logLevel, UInt32 logLevelLength);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgSetLogStderrColors(bool enabled);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgSetLoggingEnabled(bool enabled);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgSetLoggingFile(bool enabled);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgSetLogStderr(bool enabled);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgSetRetries(UInt64 retries);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgSetTimeout(UInt64 timeout);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgSetHttpProxyWithUsernameAndPassword(byte[] tseID, UInt32 tseIDLength
                                                                         , UInt32 tseType
                                                                         , byte[] connParam, UInt32 connParamLength
                                                                         , byte[] atrustTseID, UInt32 atrustTseIDLength
                                                                         , byte[] atrustApiKey, UInt32 atrustApiKeyLength
                                                                         , byte[] timeAdminID, UInt32 timAdminIDLength
                                                                         , byte[] timeAdminPwd, UInt32 timAdminPwdLength);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 cfgTseRemove(byte[] tseID, UInt32 tseIDLength);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 initializeDescriptionNotSet(byte[] description, UInt32 desriptionLength);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 initializeDescriptionSet();

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 at_setPins(byte[] adminPin, UInt32 adminPinLength
                                             , byte[] adminPuk, UInt32 adminPukLength);

        [DllImport(PATH_TO_DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern Int32 at_registerClientId(byte[] clientId, UInt32 clientIdLength);


        public static Dictionary<uint, string> LifeCycle = new Dictionary<uint, string>()
        {
            { 0, "Unknown"} ,
            { 1, "NotInitialized"} ,
            { 2, "Active"} ,
            { 3, "Suspended"} ,
            { 4, "Disabled"} ,
        };
    }
}
